2016-12-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XSLoader.pm: New file.
	* tp/Texinfo/Convert/Paragraph.pm: Move all the code into 
	XSLoader.pm.  This is intended to allow the code for loading XS 
	modules to be shared among multiple modules.

2016-12-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/terminal.c (terminal_switch_rendition): If turning off 
	either foreground or background colour, call 
	'terminal_default_colour' and reinstate any remaining foreground 
	or background colour afterwards.  This fixes a bug where 
	foreground colour might not be turned on again if background 
	colour was turned off.

2016-12-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert): Remove extra blank 
	line inserted after a menu that has been created.

2016-12-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Call 'labels_information' 
	to initialize some data for the first time.
	(labels_information): Use presence of $self->{'targets'} to 
	decide whether 'labels' has been initialized, because it is 
	possible that 'labels' could be initialized to an empty hash, 
	which would still test as false.

2016-12-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc: Always use ':' as the path separator, 
	instead of trying to check whether ';' should be used.  Ken Brown
	reported that this check was broken due to an undefined variable.

2016-12-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc: Use mkfifo instead of mknod for better 
	portability.

2016-12-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Report.pm (errors): Do not sort errors by line 
	number, as this can cause error continuations to be separated 
	from the first error line.

2016-12-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/paragraph.t (two_words_dot_paren_dot, two_words_dot_dot)
	(three_newlines): New tests.
	* tp/t/plaintext.t (punctuation_in_sc): New test.
